Bug #16532 mysql server assert in debug if table det is removed
Submitted: 16 Jan 2006 12:01 Modified: 2 Aug 2006 18:01
Reporter: Tomas Ulin Email Updates:
Status: Closed
Category:Server: General Severity:S3 (Non-critical)
Version:5.1.5/5.1.6 BK OS:Linux (Linux)
Assigned to: Andrey Hristov Target Version:

[16 Jan 2006 12:01] Tomas Ulin
Description:
removing table definition causes assert to trigger

How to repeat:
create table t1 (a int primary key, b int);
insert into t1 values(1,1);
rm test/t1.*
create table t1 (a int primary key, b int, c int);

-->

ERROR 2013 (HY000): Lost connection to MySQL server during query

#12 0x08305e5e in mysql_create_table(THD*, char const*, char const*,
st_ha_create_information*, List<create_field>&, List<Key>&, bool, unsigned) (
    thd=0x92fa290, db=0x92c16e0 "test", table_name=0x93077b0 "t2", create_info=0x92fa828,
fields=@0x92fa74c, keys=@0x92fa740, 
    internal_tmp_table=false, select_field_count=0) at sql_table.cc:1943
1943        DBUG_ASSERT(get_cached_table_share(db, alias) == 0);
[16 Jan 2006 12:08] Miguel Solorzano
Welcome to the MySQL monitor.  Commands end with ; or \g.
Your MySQL connection id is 2 to server version: 5.1.6-alpha-debug

Type 'help;' or '\h' for help. Type '\c' to clear the buffer.

mysql> create table t1 (a int primary key, b int, c int);
ERROR 2013 (HY000): Lost connection to MySQL server during query
mysql>
[21 Jan 2006 12:42] Brian Aker
I have been noticing this as well. We may not be able to support this any longer. Kostja's
team gets to own the table definition cache.
[19 Jul 2006 16:49] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/9340
[2 Aug 2006 10:32] Andrey Hristov
Will be fixed in 5.1.12
[2 Aug 2006 18:01] Paul DuBois
Noted in 5.1.12 changelog.

If the files for an open table were removed at the OS level (external
to the server), the server exited with an assertion failure.