Fix for bug#16532 mysql server assert in debug if table definition is removed

Emit an error instead of doing ASSERT